# constraint-theory-core

./: CHANGELOG.md  CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKSIDE-EXAM.md  ONBOARDING.md  README.md  SECURITY.md  SYNERGY-ANALYSIS.md  agent_context.json  quickstart.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  math_contribution.md  performance.md  question.md
.github/workflows/: ci.yml
benches/: core_benchmarks.rs
constraint_theory_core/: __init__.py  genre_brain.py  holonomy.py  lattice.py  metronome.py  rigidity.py  temporal.py
docs/: BENCHMARKS.md  DEVELOPER-GUIDE.md  DISCLAIMERS.md  PERFORMANCE.md  TESTING.md  TUTORIAL.md  USER-GUIDE.md
examples/: basic.rs  batch.rs  bench.rs  bench_comparison.rs  bench_profiled.rs  deadband_funnel.py  full_integration.rs  full_pipeline.py  hidden_dimensions.rs  holonomy.rs  holonomy_verify.py  laman_graph.py  lattice_basics.py  metronome_consensus.py  ml_integration.rs  quantizer.rs  robotics.rs  simd.rs  visualization.rs
experiments/: README.md  ricci_convergence.py  ricci_results.json  rigidity_results.json  rigidity_simulation.py
rust/src/: lib.rs  living.rs
src/: ac3.rs  backtracking.rs  cache.rs  cdcl.rs  cohomology.rs  csp.rs  curvature.rs  dcs.rs  edge_case_tests.rs  gauge.rs  hidden_dimensions.rs  holonomy.rs  kdtree.rs  lib.rs  manifold.rs  puzzle.rs  quantizer.rs  simd.rs  sudoku.rs
tests/: cross_repo_integration.rs  integration_tests.rs  test_holonomy.py  test_lattice.py  test_metronome.py  test_soft_snap.py
