[package]
name = "constraint-theory-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Deterministic manifold snapping with O(log n) KD-tree indexing — maps continuous vectors to exact Pythagorean coordinates"
authors = ["SuperInstance Team"]
license = "MIT"
repository = "https://github.com/SuperInstance/constraint-theory-core"
documentation = "https://docs.rs/constraint-theory-core"
homepage = "https://github.com/SuperInstance/constraint-theory-core"
readme = "README.md"
keywords = ["geometry", "spatial-indexing", "kdtree", "pythagorean", "deterministic"]
categories = ["algorithms", "mathematics", "science"]
exclude = [
    "target/*",
    "examples/*",
    ".github/*",
    ".git/*",
]

[dependencies]

[dev-dependencies]
rand = "0.8"

[features]
default = []
simd = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
