[package]
name = "constraint-theory-core"
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
description = "Deterministic manifold snapping with O(log n) KD-tree indexing — maps continuous vectors to exact Pythagorean coordinates"
authors = ["SuperInstance Team"]
license = "MIT"
repository = "https://github.com/SuperInstance/constraint-theory-core"
documentation = "https://docs.rs/constraint-theory-core"
homepage = "https://github.com/SuperInstance/constraint-theory-core"
readme = "README.md"
keywords = ["geometry", "spatial-indexing", "kdtree", "pythagorean", "deterministic", "floating-point", "exact-arithmetic", "constraint-satisfaction"]
categories = ["algorithms", "mathematics", "science::robotics", "game-development"]
exclude = [
    "target/*",
    "examples/*",
    ".github/*",
    ".git/*",
]

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "core_benchmarks"
harness = false

[features]
default = []
simd = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
